--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 "dependencies": {
-  "express": "4.10",
-  "angularjs": "0.0.1",
-  "sequelize":   "2.0.0"
+  "express": "~4.0.0",
+  "angularjs": "~0.0.1",
+  "mongoose":   "~3.8.19"
 }
